# rag2

./: .gitignore  ARCHITECTURE.md  BRUTAL_FINAL_ASSESSMENT.md  Cargo.toml  FINAL_STATUS.md  INTEGRATION_SUMMARY.md  MCP_SETUP_GUIDE.md  MIGRATION_GUIDE.md  MVP_SUMMARY.md  NOMIC_BRUTAL_ASSESSMENT_REPORT.md  README.md  embed-search.toml  register_mcp.sh  simple_parser_test.rs  swarm.md  test_mcp.sh  test_mcp_direct.sh  test_mvp_demo.sh  test_nomic_direct.rs
.agent_memory/: bm25_implementation_summary.md  bm25_research.md  brutal_agent_truthfulness_assessment.md  brutal_compilation_analysis.md  cleanup_log.md  codebase_analysis.md  final_brutal_verdict.md  final_embeddings_integration_report.md  final_truth_verification_report.md  lancedb_tantivy_research.md  nomic_ast_research.md  review_1_research.md  review_2_cleanup.md  review_3_plan.md  tantivy_comprehensive_testing_report.md
docs/: BRUTAL_AGENT_VALIDATION_REPORT.md  BRUTAL_COMPILATION_TRUTH.md  BRUTAL_DEPENDENCY_ANALYSIS.md  CRITICAL_ASSESSMENT.md  FINAL_TRUTH_ASSESSMENT.md  IMPLEMENTATION_PLAN.md  MCP_SERVER_SETUP.md  MIGRATION_IMPLEMENTATION_STRATEGY.md  nomic-embed-migration-plan.md  phase1-system-assessment.md  phase2-embeddings-migration-plan.md  phase3-implementation-strategy.md  phase4-testing-validation-plan.md  phase5-swarm-orchestration-strategy.md  swarm-embeddings-migration-strategy.md  tantivy_fuzzy_search.md
docs/embedplan/: 00-coordination-manifest.md  01-model-analysis.md  02-memory-management.md  03-lancedb-integration.md  04-implementation-roadmap.md  04-real-implementations.md  05-architecture-design.md  05-final-assessment.md  06-tech-stack-analysis.md
docs/swarmop/: swarm-optimization-guide.marp.md  swarm-optimization-guide.md
examples/: lancedb_validation.rs  nomic_simple_demo.rs  tantivy_demo.rs
scripts/: .mcp-bash.json  README.md  check_errors.sh  final_test.sh  find_errors.sh  mcp_wrapper.js  mcp_wrapper.sh  run_embedding_tests.sh  simple_mcp_test.sh  swarm-embeddings-migration.sh  test_basic.sh  test_wrapper.sh  validate_mcp.sh  validate_test_structure.sh  verify_mcp_integration.rs
src/: error.rs  lib.rs  main.rs  minimal_cargo.toml  minimal_mvp.rs
src/ast/: mod.rs  simple_parser.rs
src/cache/: bounded_cache.rs
src/chunking/: line_validator.rs  mod.rs  regex_chunker.rs  three_chunk.rs
src/config/: mod.rs  safe_config.rs
src/embedding/: cache.rs  lazy_embedder.rs  mod.rs  nomic.rs  streaming_core.rs  streaming_nomic_integration.rs
src/git/: mod.rs  simple_watcher.rs  watcher.rs
src/mcp/: config.rs  error.rs  integration_example.rs  mod.rs  orchestrator.rs  protocol.rs  server.rs  types.rs  watcher.rs
src/mcp-bridge/: .gitignore  Cargo.toml
src/mcp-bridge/src/: embedding.rs  faiss_index.rs  lib.rs  onnx_models.rs
src/mcp-server/: .eslintrc.js  .gitignore  README.md  build-config.json  package.json  tsconfig.json
src/mcp-server/src/: engine.ts  index.ts  tools.ts  types.d.ts
src/mcp/tools/: clear.rs  index.rs  mod.rs  orchestrated_search.rs  search.rs  status.rs  watcher.rs
src/mcp/transport/: mod.rs  stdio.rs
src/observability/: logging.rs  metrics.rs  mod.rs
src/search/: bm25.rs  bm25_fixed.rs  cache.rs  config.rs  fusion.rs  inverted_index.rs  mod.rs  native_search.rs  preprocessing.rs  search_adapter.rs  simple_bm25.rs  simple_searcher.rs  simple_tantivy.rs  symbol_enhanced_searcher.rs  symbol_index.rs  tantivy_search.rs  text_processor.rs  unified.rs  working_fuzzy_search.rs
src/search/bm25/: incremental_tests.rs
src/storage/: lancedb.rs  lancedb_storage.rs  lightweight_storage.rs  mod.rs  nomic_lancedb_integration.rs  safe_vectordb.rs  simple_vectordb.rs
src/utils/: file_utils.rs  math.rs  memory.rs  memory_monitor.rs  mod.rs  retry.rs
src/watcher/: debouncer.rs  edge_cases.rs  events.rs  git_watcher.rs  mod.rs  updater.rs
tests/: BRUTAL_MCP_VALIDATION_REPORT.md  BRUTAL_TRUTH_REPORT.md  COMPONENT_VALIDATION_REPORT.md  EMBEDDING_MIGRATION_TEST_SUITE.md  basic_embedding_test.rs  bm25_functional_verification.rs  bm25_performance_verification.rs  brutal_integration_test.rs  brutal_mcp_end_to_end_validation.rs  brutal_truth_test.rs  config_initialization_test.rs  embedding_test.rs  embeddings_integration_verification.rs  end_to_end_test.rs  git_watcher_integration_test.rs  intelligent_fusion_test.rs  memory_safety_test.rs  minimal_mvp_integration_test.rs  minimal_working_test.rs  model_loading_test.rs  nomic_embedding_brutal_test.rs  parser_performance_test.rs  simple_ast_test.rs  simple_git_watcher_test.rs  simple_watcher_tests.rs  tantivy_fuzzy_test.rs
tests/.claude-flow/metrics/: performance.json  task-metrics.json
tests/benchmarks/: embedding_performance_bench.rs
tests/embedding_migration/: integration_tests.rs  unit_tests.rs
tests/load_testing/: embedding_stress_tests.rs
tests/validation/: cache_validation_tests.rs  llama_cpp_integration_tests.rs  rag_system_validation.rs  regression_tests.rs  test_runner.rs
